tests/fixtures/power10/fail/empty-catch.ts
export async function swallowFailure(): Promise<void> {
  try {
    await Promise.resolve();
  } catch {}
}
